--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -20,6 +20,8 @@
 	--secondary-bg-color: 60, 168, 118;
 	--action-bg-color: 206, 65, 76;
 	--action2-bg-color: 255, 183, 3;
+
+	--default-border-radius: 0.5rem;
 }
 
 html[data-theme="dark"] {
