--- a/css/scss/components/_browser.scss
+++ b/css/scss/components/_browser.scss
@@ -1,8 +1,8 @@
 .ms-browser {
 	background-color: rgba(var(--ligth-bg-color), 1);
 	border: 4px solid rgba(var(--ligth-bg-color), 1);
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
+	border-top-left-radius: var(--default-border-radius);
+	border-top-right-radius: var(--default-border-radius);
 
 	.ms-tab-browser {
 		padding: 0.6rem 0.6rem;
