--- a/css/scss/components/_user.scss
+++ b/css/scss/components/_user.scss
@@ -1,12 +1,3 @@
-/* Variables */
-html {
-	--user-bg-color: 36, 36, 36;
-}
-
-html[data-theme="dark"] {
-	--user-bg-color: 243, 243, 243;
-}
-
 .ms-user {
 	/* General */
 	width: 100%;
@@ -20,7 +11,7 @@ html[data-theme="dark"] {
 
 	/* Margins */
 	padding: 1rem;
-	border-radius: 10px;
+	border-radius: var(--default-border-radius);
 
 	.ms-avatar {
 		display: block;
