--- a/css/scss/contents/_typography.scss
+++ b/css/scss/contents/_typography.scss
@@ -1,33 +1,36 @@
 /* Title */
-h1 {
-	font-size: 5rem;
-	margin: 1rem 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: Inter, sans-serif;
 	padding: 0;
+}
+h1 {
+	font-size: 3.5rem;
+	margin: 1rem 0;
 }
 h2 {
-	font-size: 4rem;
-	margin: 1rem 0;
-	padding: 0;
-}
-h3 {
 	font-size: 3rem;
 	margin: 1rem 0;
-	padding: 0;
+}
+h3 {
+	font-size: 2.5rem;
+	margin: 1rem 0;
 }
 h4 {
 	font-size: 2rem;
 	margin: 1rem 0;
-	padding: 0;
 }
 h5 {
 	font-size: 1.5rem;
 	margin: 1rem 0;
-	padding: 0;
 }
 h6 {
 	font-size: 1.25rem;
 	margin: 1rem 0;
-	padding: 0;
 }
 
 /* Mark */
@@ -48,18 +51,17 @@ mark,
 code,
 .ms-code {
 	/* Color */
-	background-color: #e045404d;
+	background-color: #e0454031;
 	color: #e04540;
 
 	/* Text */
-	font-size: 90%;
 	font-family: Courier, monospace;
 
 	/* Border */
 	border-radius: var(--default-border-radius);
 
 	/* Margin */
-	padding: 0.1rem 0.2rem;
+	padding: 0.2rem 0.4rem;
 }
 
 /* Terminal */
