--- a/css/scss/contents/_form.scss
+++ b/css/scss/contents/_form.scss
@@ -16,7 +16,6 @@ textarea,
 select {
 	/* General */
 	display: inline-block;
-	width: 100%;
 	height: 40px;
 	appearance: none;
 	box-sizing: border-box;
@@ -64,6 +63,10 @@ select {
 		border-radius: 50px;
 	}
 
+	&.ms-fullwidth {
+		width: 100%;
+	}
+
 	&.ms-disabled {
 		cursor: not-allowed;
 	}
@@ -93,14 +96,13 @@ select {
 
 	label,
 	.ms-label {
+		font-weight: 500;
 		display: block;
 		margin-bottom: 0.6rem;
-		font-size: 0.9rem;
 	}
 
 	.ms-under-input {
 		display: block;
-		font-size: 0.9rem;
 		margin-top: 0.4rem;
 	}
 }
