Browser, Button, Blockquote, Loading
- Fix browser dots margin.
- Fix loading sizes.
- Fix Blockquote border color.
- Fix loading button.

--- a/css/scss/components/_browser.scss
+++ b/css/scss/components/_browser.scss
@@ -16,6 +16,7 @@
 				width: 12px;
 				background-color: rgba(var(--primary-bg-color), 1);
 				border-radius: 50%;
+				margin-right: 2px;
 
 				&.red {
 					background-color: #e04540;
