--- a/css/scss/contents/_typography.scss
+++ b/css/scss/contents/_typography.scss
@@ -37,7 +37,9 @@ h6 {
 mark,
 .ms-mark {
 	/* Color */
+	display: inline;
 	background-color: #ffe9b3;
+	color: rgb(25, 25, 25);
 
 	/* Border */
 	border-bottom: 0.05rem solid #ffd367;
@@ -51,6 +53,7 @@ mark,
 code,
 .ms-code {
 	/* Color */
+	display: inline;
 	background-color: #e0454015;
 	color: #e04540;
 
@@ -68,10 +71,10 @@ code,
 kbd,
 .ms-kbd {
 	/* Text */
-	background-color: rgba(var(--main-text-color), 1);
+	display: inline;
+	background-color: #000;
 	color: #ffffff;
-	font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-		"Courier New", monospace;
+	font-family: Courier, monospace;
 
 	/* Border */
 	border-radius: var(--default-border-radius);
@@ -157,24 +160,24 @@ blockquote,
 	}
 
 	&.ms-primary {
-		border-color: rgba(var(--primary-bg-color), 0.5);
+		border-color: rgba(var(--primary-bg-color), 1);
 	}
 
 	&.ms-secondary {
-		border-color: rgba(var(--secondary-bg-color), 0.5);
+		border-color: rgba(var(--secondary-bg-color), 1);
 	}
 
 	&.ms-action {
-		border-color: rgba(var(--action-bg-color), 0.5);
+		border-color: rgba(var(--action-bg-color), 1);
 	}
 
 	&.ms-action2 {
-		border-color: rgba(var(--action2-bg-color), 0.5);
+		border-color: rgba(var(--action2-bg-color), 1);
 	}
 }
 
 /* HR */
-hr {
+hr, .ms-hr {
 	/* General */
 	width: 100%;
 	height: 1px;
