--- a/css/scss/helpers/_helper.scss
+++ b/css/scss/helpers/_helper.scss
@@ -267,8 +267,7 @@
 
 /* Box Shadow */
 .ms-box-shadow {
-	box-shadow: rgba(10, 10, 10, 0.1) 0px 8px 16px -2px,
-		rgba(10, 10, 10, 0) 0px 0px 0px 1px !important;
+	box-shadow: rgba(10, 10, 10, 0.2) 0px 8px 16px -2px, rgba(10, 10, 10, 0) 0px 0px 0px 1px !important;
 }
 .ms-box-shadow-none {
 	box-shadow: none !important;
