--- a/css/scss/elements/_alert.scss
+++ b/css/scss/elements/_alert.scss
@@ -110,16 +110,16 @@
 	}
 
 	&.ms-small {
-		padding: 0.7rem;
+		padding: 0.7rem 1rem;
 	}
 
 	&.ms-medium {
-		padding: 1.2rem;
+		padding: 1.2rem 1.8rem;
 		font-size: 1.1rem;
 	}
 
 	&.ms-large {
-		padding: 1.5rem;
+		padding: 1.5rem 2rem;
 		font-size: 1.2rem;
 	}
 
