--- a/css/scss/helpers/_helper.scss
+++ b/css/scss/helpers/_helper.scss
@@ -186,6 +186,14 @@
 	position: relative !important;
 }
 
+.ms-posision-fixed {
+	position: fixed !important;
+}
+
+.ms-posision-sticky {
+	position: sticky !important;
+}
+
 .ms-posision-absolute {
 	position: absolute !important;
 }
@@ -272,7 +280,7 @@
 
 /* Center div */
 .ms-div-center {
-	display: block;
+	display: block !important;
 	margin: 0 auto !important;
 }
 
@@ -326,18 +334,14 @@
 	flex-direction: column-reverse !important;
 }
 
-.ms-flex-nowrap {
+.ms-flex-wrap-nowrap {
 	flex-wrap: nowrap !important;
 }
 .ms-flex-wrap-wrap {
 	flex-wrap: wrap !important;
 }
-.ms-flex-wrapreverse {
+.ms-flex-wrap-reverse {
 	flex-wrap: wrap-reverse !important;
-}
-
-.ms-flex-flow-row {
-	flex-flow: row !important;
 }
 
 .ms-flex-justify-start {
@@ -355,7 +359,7 @@
 .ms-flex-justify-around {
 	justify-content: space-around !important;
 }
-.ms-flex-justify-space-evenly {
+.ms-flex-justify-evenly {
 	justify-content: space-evenly !important;
 }
 .ms-flex-justify-left {
@@ -401,43 +405,43 @@
 }
 
 .ms-flex-item-0 {
-	flex: 0 !important;
+	order: 0 !important;
 }
 .ms-flex-item-1 {
-	flex: 1 !important;
+	order: 1 !important;
 }
 .ms-flex-item-2 {
-	flex: 2 !important;
+	order: 2 !important;
 }
 .ms-flex-item-3 {
-	flex: 3 !important;
+	order: 3 !important;
 }
 .ms-flex-item-4 {
-	flex: 4 !important;
+	order: 4 !important;
 }
 .ms-flex-item-5 {
-	flex: 5 !important;
+	order: 5 !important;
 }
 .ms-flex-item-6 {
-	flex: 6 !important;
+	order: 6 !important;
 }
 .ms-flex-item-7 {
-	flex: 7 !important;
+	order: 7 !important;
 }
 .ms-flex-item-8 {
-	flex: 8 !important;
+	order: 8 !important;
 }
 .ms-flex-item-9 {
-	flex: 9 !important;
+	order: 9 !important;
 }
 .ms-flex-item-10 {
-	flex: 10 !important;
+	order: 10 !important;
 }
 .ms-flex-item-11 {
-	flex: 11 !important;
+	order: 11 !important;
 }
 .ms-flex-item-12 {
-	flex: 12 !important;
+	order: 12 !important;
 }
 
 .ms-flex-grow-0 {
@@ -475,6 +479,9 @@
 }
 .ms-flex-grow-11 {
 	flex-grow: 11 !important;
+}
+.ms-flex-grow-12 {
+	flex-grow: 12 !important;
 }
 
 .ms-flex-shrink-0 {
@@ -515,6 +522,42 @@
 }
 .ms-flex-shrink-12 {
 	flex-shrink: 12 !important;
+}
+.ms-flex-shrink-min-1 {
+	flex-shrink: -1 !important;
+}
+.ms-flex-shrink-min-2 {
+	flex-shrink: -2 !important;
+}
+.ms-flex-shrink-min-3 {
+	flex-shrink: -3 !important;
+}
+.ms-flex-shrink-min-4 {
+	flex-shrink: -4 !important;
+}
+.ms-flex-shrink-min-5 {
+	flex-shrink: -5 !important;
+}
+.ms-flex-shrink-min-6 {
+	flex-shrink: -6 !important;
+}
+.ms-flex-shrink-min-7 {
+	flex-shrink: -7 !important;
+}
+.ms-flex-shrink-min-8 {
+	flex-shrink: -8 !important;
+}
+.ms-flex-shrink-min-9 {
+	flex-shrink: -9 !important;
+}
+.ms-flex-shrink-min-10 {
+	flex-shrink: -10 !important;
+}
+.ms-flex-shrink-min-11 {
+	flex-shrink: -11 !important;
+}
+.ms-flex-shrink-min-12 {
+	flex-shrink: -12 !important;
 }
 
 .ms-flex-basis-auto {
