Label, Organisation, Helper
- Fix label padding.
- Style reorganization.
-  Fix color helper.

--- a/css/scss/helpers/_helper.scss
+++ b/css/scss/helpers/_helper.scss
@@ -3,7 +3,7 @@
 	background-color: rgba(var(--main-bg), 1);
 }
 .ms-bg-light {
-	background-color: rgba(var(--light-text-color), 1);
+	background-color: rgba(var(--ligth-bg-color), 1);
 }
 .ms-bg-primary {
 	background-color: rgba(var(--primary-bg-color), 1) !important;
