--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -72,7 +72,7 @@ a {
 @import "elements/_alert";
 @import "components/_article";
 @import "components/_avatar";
-@import "components/_breadcrumb";
+@import "elements/_breadcrumb";
 @import "components/_browser";
 @import "elements/_button";
 @import "components/_card";
@@ -81,11 +81,11 @@ a {
 @import "contents/_form";
 @import "layout/_grid";
 @import "helpers/_helper";
-@import "layout/_hero";
+@import "components/_hero";
 @import "elements/_label";
-@import "components/_loading";
+@import "elements/_loading";
 @import "components/_menu";
-@import "components/_pagination";
+@import "elements/_pagination";
 @import "elements/_progressbar";
 @import "components/_tab";
 @import "contents/_table";
