--- a/css/scss/components/_avatar.scss
+++ b/css/scss/components/_avatar.scss
@@ -87,7 +87,7 @@
 		right: -5px;
 		bottom: -5px;
 		background-color: rgba(243, 243, 243, 1);
-		border: 3px solid rgba(var(--main-bg), 1);
+		border: 3px solid rgba(var(--default-border-color), 1);
 		overflow: hidden;
 		border-radius: 50%;
 
