Fix Spelling of `light-bg-color`
Change `ligth-bg-color` to `light-bg-color`
Add `extension.json` to reccomend installation of Live Sass compiler
Bump Version

--- a/css/scss/components/_avatar.scss
+++ b/css/scss/components/_avatar.scss
@@ -16,7 +16,7 @@
 	position: relative;
 
 	/* Colors */
-	background-color: rgba(var(--ligth-bg-color), 1);
+	background-color: rgba(var(--light-bg-color), 1);
 
 	/* Border */
 	border-radius: 50%;
