--- a/css/scss/components/_card.scss
+++ b/css/scss/components/_card.scss
@@ -104,7 +104,7 @@
 
 	&.ms-fill {
 		/* Color */
-		background-color: rgba(var(--ligth-bg-color), 1);
+		background-color: rgba(var(--light-bg-color), 1);
 
 		/* Border */
 		border-radius: var(--default-border-radius);
