--- a/css/scss/components/_hero.scss
+++ b/css/scss/components/_hero.scss
@@ -19,7 +19,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: rgba(var(--ligth-bg-color), 0.5);
+	background-color: rgba(var(--light-bg-color), 0.5);
 
 	.ms-hero-background {
 		z-index: 1;
