--- a/css/scss/components/_user.scss
+++ b/css/scss/components/_user.scss
@@ -70,7 +70,7 @@
 	}
 
 	&.ms-fill {
-		background-color: rgba(var(--ligth-bg-color), 1);
+		background-color: rgba(var(--light-bg-color), 1);
 		border: none;
 	}
 
