--- a/css/scss/contents/_table.scss
+++ b/css/scss/contents/_table.scss
@@ -30,7 +30,7 @@
 
 		tbody {
 			tr:nth-of-type(odd) {
-				background: rgba(var(--ligth-bg-color), 1);
+				background: rgba(var(--light-bg-color), 1);
 			}
 		}
 	}
