--- a/css/scss/contents/_typography.scss
+++ b/css/scss/contents/_typography.scss
@@ -183,7 +183,7 @@ hr, .ms-hr {
 	height: 1px;
 
 	/* Color */
-	background-color: rgba(var(--ligth-bg-color), 1);
+	background-color: rgba(var(--light-bg-color), 1);
 
 	/* Border */
 	border: none;
