--- a/css/scss/elements/_breadcrumb.scss
+++ b/css/scss/elements/_breadcrumb.scss
@@ -54,7 +54,7 @@
 		width: 100%;
 
 		/* Color */
-		background-color: rgba(var(--ligth-bg-color), 1);
+		background-color: rgba(var(--light-bg-color), 1);
 	}
 
 	&.ms-border {
