--- a/css/scss/elements/_dropdown.scss
+++ b/css/scss/elements/_dropdown.scss
@@ -48,7 +48,7 @@
 			top: 100%;
 
 			/* Color */
-			background-color: rgba(var(--ligth-bg-color), 1);
+			background-color: rgba(var(--light-bg-color), 1);
 
 			/* Border */
 			border-radius: var(--default-border-radius);
