--- a/css/scss/elements/_label.scss
+++ b/css/scss/elements/_label.scss
@@ -26,7 +26,7 @@
 	width: auto;
 
 	/* Color */
-	background-color: rgba(var(--ligth-bg-color), 1);
+	background-color: rgba(var(--light-bg-color), 1);
 	color: rgba(var(--main-text-color), 1);
 
 	/* Border */
