--- a/css/scss/elements/_loading.scss
+++ b/css/scss/elements/_loading.scss
@@ -2,7 +2,7 @@
 	width: 25px;
 	height: 25px;
 	border-radius: 50%;
-	border: 5px solid rgba(var(--ligth-bg-color), 1);
+	border: 5px solid rgba(var(--light-bg-color), 1);
 	border-top: 5px solid rgba(var(--default-bg-color), 1);
 	-webkit-animation: spin 0.5s linear infinite;
 	animation: spin 0.5s linear infinite;
@@ -10,21 +10,21 @@
 	&.ms-small {
 		width: 10px;
 		height: 10px;
-		border: 3px solid rgba(var(--ligth-bg-color), 1);
+		border: 3px solid rgba(var(--light-bg-color), 1);
 		border-top: 3px solid rgba(var(--default-bg-color), 1);
 	}
 
 	&.ms-medium {
 		width: 45px;
 		height: 45px;
-		border: 8px solid rgba(var(--ligth-bg-color), 1);
+		border: 8px solid rgba(var(--light-bg-color), 1);
 		border-top: 8px solid rgba(var(--default-bg-color), 1);
 	}
 
 	&.ms-large {
 		width: 70px;
 		height: 70px;
-		border: 10px solid rgba(var(--ligth-bg-color), 1);
+		border: 10px solid rgba(var(--light-bg-color), 1);
 		border-top: 10px solid rgba(var(--default-bg-color), 1);
 	}
 
