--- a/css/scss/elements/_pagination.scss
+++ b/css/scss/elements/_pagination.scss
@@ -38,11 +38,11 @@
 				}
 
 				&:hover {
-					background-color: rgba(var(--ligth-bg-color), 1);
+					background-color: rgba(var(--light-bg-color), 1);
 				}
 
 				&:active {
-					background-color: rgba(var(--ligth-bg-color), 0.5);
+					background-color: rgba(var(--light-bg-color), 0.5);
 				}
 			}
 
