--- a/css/scss/elements/_progressbar.scss
+++ b/css/scss/elements/_progressbar.scss
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 1.1rem;
 	display: flex;
-	background-color: rgba(var(--ligth-bg-color), 1);
+	background-color: rgba(var(--light-bg-color), 1);
 	text-align: center;
 	overflow: hidden;
 	margin: 10px 0;
