--- a/css/scss/layout/_footer.scss
+++ b/css/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .ms-footer {
 	width: 100%;
-	background-color: rgba(var(--ligth-bg-color), 1);
+	background-color: rgba(var(--light-bg-color), 1);
 	text-align: center;
 	box-sizing: border-box;
 	margin: 0;
