--- a/css/scss/components/_browser.scss
+++ b/css/scss/components/_browser.scss
@@ -1,6 +1,6 @@
 .ms-browser {
-	background-color: rgba(var(--ligth-bg-color), 1);
-	border: 4px solid rgba(var(--ligth-bg-color), 1);
+	background-color: rgba(var(--light-bg-color), 1);
+	border: 4px solid rgba(var(--light-bg-color), 1);
 	border-top-left-radius: var(--default-border-radius);
 	border-top-right-radius: var(--default-border-radius);
 
