--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -1,7 +1,7 @@
 /*
 * minstyle.io - A simple CSS Framework !
 * Repo : https://github.com/Airmime/minstyle.io
-* Version : v2.0.1
+* Version : v2.0.2
 * Website : https://minstyle.io/
 */
 
@@ -13,7 +13,7 @@
 	--light-text-color: 190, 190, 190;
 
 	--default-bg-color: 40, 40, 40;
-	--ligth-bg-color: 242, 242, 242;
+	--light-bg-color: 242, 242, 242;
 	--default-border-color: 230, 230, 230;
 
 	--primary-bg-color: 250, 77, 96;
@@ -28,7 +28,7 @@ html[data-theme="dark"] {
 	--main-bg: 37, 40, 44;
 	--main-text-color: 255, 255, 255;
 
-	--ligth-bg-color: 46, 49, 54;
+	--light-bg-color: 46, 49, 54;
 	--default-border-color: 55, 58, 63;
 
 	--default-bg-color: 243, 243, 243;
