--- a/css/scss/elements/_button.scss
+++ b/css/scss/elements/_button.scss
@@ -64,20 +64,40 @@ input[type="submit"] {
 	margin: 0rem 0.1rem;
 	padding: 0.5rem 1rem;
 
+	&.ms-btn-active{
+		box-shadow: 0 0 0 5px rgba(var(--light-bg-color), .5);
+	}
+
 	&.ms-primary {
 		@include btn-default(var(--primary-bg-color), #fff);
+
+		&.ms-btn-active{
+			box-shadow: 0 0 0 5px rgba(var(--primary-bg-color), .3);
+		}
 	}
 
 	&.ms-secondary {
 		@include btn-default(var(--secondary-bg-color), #fff);
+
+		&.ms-btn-active{
+			box-shadow: 0 0 0 5px rgba(var(--secondary-bg-color), .3);
+		}
 	}
 
 	&.ms-action {
 		@include btn-default(var(--action-bg-color), #fff);
+
+		&.ms-btn-active{
+			box-shadow: 0 0 0 5px rgba(var(--action-bg-color), .3);
+		}
 	}
 
 	&.ms-action2 {
 		@include btn-default(var(--action2-bg-color), #fff);
+
+		&.ms-btn-active{
+			box-shadow: 0 0 0 5px rgba(var(--action2-bg-color), .3);
+		}
 	}
 
 	&.ms-outline {
